# CodeZombiesInvestigator

./: .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  COMPILATION_FIX_GUIDE.md  COMPILATION_STATUS_FINAL.md  Cargo.toml  USER_STORY_1_STATUS.md  clippy.toml  demo  demo_config.json  rustfmt.toml  standalone_demo  standalone_demo.rs
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
.specify/memory/: constitution.md
czi_core/: Cargo.toml
czi_core/src/: base.rs  error.rs  lib.rs  logging.rs
czi_core/src/config/: auth.rs  manager.rs  mod.rs  repository.rs  root_node.rs  storage.rs  tests.rs
czi_core/src/git/: blame.rs  diff.rs  mod.rs  operations.rs  repository.rs  utils.rs
czi_core/src/graph/: builder.rs  edge.rs  mod.rs  semantic_links.rs  serialization.rs  tests.rs
czi_core/src/graph/detectors/: calls.rs  imports.rs  mod.rs
czi_core/src/io/: git_history.rs  mod.rs  sync.rs  validator.rs
czi_core/src/parser/: language.rs  mod.rs  pipeline.rs  symbol.rs  tree_sitter_integration.rs
czi_core/src/parser/extractors/: java.rs  javascript.rs  mod.rs  python.rs  shell.rs
czi_core/src/runtime/: executor.rs  mod.rs  monitor.rs  scheduler.rs  task_pool.rs  worker.rs
czi_core/src/tests/: mod.rs  tests.rs
czi_desktop/: index.html  package-lock.json  package.json  vite.config.js
czi_desktop/src/: App.vue  index.html  main.js
czi_desktop/src-tauri/: Cargo.toml  tauri.conf.json
czi_desktop/src-tauri/icons/: README.md
czi_desktop/src-tauri/src/: main.rs
czi_desktop/src/components/repository/: AuthConfig.vue  RepositoryConfig.vue  RepositoryList.vue  RepositoryValidator.vue
czi_desktop/src/components/settings/: SettingsPanel.vue
czi_ipc/: Cargo.toml
czi_ipc/src/: handlers.rs  lib.rs  transport.rs  types.rs
czi_ipc/src/commands/: analysis.rs  mod.rs  queries.rs  repository.rs
czi_ipc/src/handlers/: mod.rs  repository.rs
docs/: API.md  UI.md  consti.md  design.md  plan.md  req.md
examples/: simple_demo.rs  standalone_demo.rs
specs/001-zombie-code-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-zombie-code-analyzer/checklists/: requirements.md
specs/001-zombie-code-analyzer/contracts/: openapi.yaml
tests/contract/: test_analysis.rs  test_queries.rs  test_repository_validation.rs
tests/integration/: test_analysis_pipeline.rs  test_repository_config.rs  test_visualization.rs
