[workspace]
resolver = "2"
members = [
    "czi_core",
    "czi_ipc",
    "czi_desktop/src-tauri"
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File pattern matching
glob = "0.3"

# Directory traversal
walkdir = "2.4"

# System information
num_cpus = "1.16"

# Graph processing
petgraph = "0.6"

# Parsing
tree-sitter = "0.20"
tree-sitter-java = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-bash = "0.20"

# Git operations
git2 = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Tauri for desktop app
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "path-all", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-build = "1.5"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
