[package]
name = "czi_core"
version = "0.1.0"
edition = "2021"
description = "Core analysis engine for CodeZombiesInvestigator"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
bincode = { workspace = true }

# URL parsing
url = "2.5"

# Temporary directories
tempfile = "3.8"

# Graph processing
petgraph = { workspace = true }

# Parsing
tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-bash = { workspace = true }

# Git operations
git2 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# UUID generation
uuid = { workspace = true }

# CPU count
num_cpus = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = "0.1"

# File pattern matching
glob = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# Directory utilities
dirs = "5.0"

# File system walking
walkdir = "2.0"

[[example]]
name = "simple_demo"
path = "../examples/simple_demo.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tracing-test = "0.2"