[package]
name = "czi_desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop application for CodeZombiesInvestigator"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
# Core library
czi_core = { path = "../../czi_core" }
czi_ipc = { path = "../../czi_ipc" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tauri
tauri = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Date/time handling
chrono = { workspace = true }